# cargo-generate-template

./: LICENSE  README.md
.github/workflows/: rust.yml
template/: .gitignore  Cargo.toml  LICENSE  README.md  cargo-generate.toml
template/src/: main.rs
tests/: basic_template.toml  bevy_template.toml
